[project]
name = "replyweave"
version = "0.1.0"
description = "Backend for sharing LLM conversations"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Replyweave" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.19",
  "alembic>=1.13.1",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "pgvector>=0.2.5",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.3",
  "sentence-transformers>=2.6.1",
  "numpy>=1.26.4"
]

[tool.uv]
resolution = "lowest-direct"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
